# Aegisr

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile.toml  README.md  dsetup.sh  project-data-flow.mermaid
.github/: FUNDING.yml
.github/workflows/: release.yml
benches/: engine_bench.rs
lib/aegisr_engine/: Cargo.toml
lib/aegisr_engine/src/: commands.rs  engine.rs  lib.rs
lib/aegisrlib/: Cargo.toml
lib/aegisrlib/src/: constant.rs  core.rs  crypto.rs  file_system.rs
src/: lib.rs  main.rs
src/commands/: developer_command.rs  init_command.rs  mod.rs
src/utils/: constants.rs
