[package]
name = "aegisr"
version = "1.0.1-beta"
edition = "2024"
authors = ["Surelle"]
description = "Aegisr"
license = "MIT"

[[bin]]
name = "aegisr"
path = "src/bin/terminal.rs"

[[bin]]
name = "aegisr-daemon"
path = "src/bin/daemon.rs"

[dependencies]
colored = "3.0.0"
aegisr_engine = { path = "./lib/aegisr_engine" }
tokio = { version = "1", features = ["full", "macros"] }
clap = { version = "4.5.51", features = ["derive"] }
serde = "1.0.228"
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "ansi"] }
tracing-appender = "0.2"
hostname = "0.4"