[package]
name = "aegisr"
version = "1.0.2-beta"
edition = "2024"
authors = ["Surelle"]
description = "Aegisr"
license = "MIT"

[[bin]]
name = "aegisr"
path = "src/bin/terminal.rs"

[[bin]]
name = "aegisr-repl"
path = "src/bin/repl.rs"

[[bin]]
name = "aegisr-daemon"
path = "src/bin/daemon.rs"

[dependencies]
colored = "3.0.0"
aegisrlib = { path = "lib/aegisrlib" }
tokio = { version = "1", features = ["full", "macros"] }
clap = { version = "4.5.51", features = ["derive"] }
serde = "1.0.228"
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "ansi"] }
tracing-appender = "0.2"
hostname = "0.4"
easy-repl = "0.2.1"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "engine_bench"
harness = false
path = "benches/engine_bench.rs"